Components de formulários

--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/roboto": "^4.5.8",
+    "@hookform/error-message": "^2.0.0",
+    "@hookform/resolvers": "^2.9.7",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.1",
     "axios": "^0.27.2",
+    "mui-tel-input": "^1.4.1",
+    "mustache": "^4.2.0",
     "next": "latest",
     "next-pwa": "5.5.4",
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.2",
+    "react-imask": "^6.4.2",
+    "styled-components": "^5.3.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
