Formulário da JoinUs com visual pronto

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.9.7",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.95",
     "@mui/material": "^5.10.1",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "mui-tel-input": "^1.4.1",
     "mustache": "^4.2.0",
     "next": "latest",
@@ -21,7 +23,10 @@
     "next-seo": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.34.2",
+    "react-icons": "^4.4.0",
     "react-imask": "^6.4.2",
     "styled-components": "^5.3.5",
     "yup": "^0.32.11"
