--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.95",
     "@mui/material": "^5.10.1",
+    "aws-sdk": "^2.1199.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.2",
     "lodash": "^4.17.21",
     "mui-tel-input": "^1.4.1",
     "mustache": "^4.2.0",
     "next": "latest",
     "next-pwa": "5.5.4",
     "next-seo": "^5.5.0",
+    "node-fetch": "^3.2.10",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
@@ -29,6 +33,7 @@
     "react-icons": "^4.4.0",
     "react-imask": "^6.4.2",
     "styled-components": "^5.3.5",
+    "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
