--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_EMBED_DOMAIN=localhost
 NEXT_PUBLIC_API_BACKEND_URL=http://localhost:1337/api
+NEXT_PUBLIC_API_FRONTEND_URL=http://localhost:3000/api
 STATIC_PAGES_TTL=300
