--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-sdk": "^2.1199.0",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
+    "googleapis": "^107.0.0",
     "lodash": "^4.17.21",
     "mui-tel-input": "^1.4.1",
     "mustache": "^4.2.0",
