--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "react-imask": "^6.4.2",
+    "react-markdown": "^8.0.3",
     "react-twitter-widgets": "^1.11.0",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
